kubernetes/services/market-intel-engine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: market-intel-engine-service
spec:
  type : ClusterIP
  selector:
    app: market-intel-engine
  ports:
  - name: mie-svc-port
    protocol: TCP
    port: 8000
    targetPort: mie-port
