kubernetes/services/signal-engine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signal-engine-service
spec:
  type : NodePort
  selector:
    app: signal-engine
  ports:
  - name: se-svc-port
    protocol: TCP
    port: 8000
    targetPort: se-port
    nodePort: 31000
