kubernetes/services/stockflow-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sf-ctrl-service
spec:
  type : NodePort
  selector:
    app: stockflow-controller
  ports:
  - name: sc-svc-port
    protocol: TCP
    port: 9000
    targetPort: sc-port
    nodePort: 32000
